--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:cv": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "start": "webpack-dev-server --config webpack/webpack.config.js",
     "perf": "lighthouse http://localhost:3000 --view",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.production.config.js --progress --profile --colors",
     "server": "node server.js NODE_ENV=productio",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
