--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ cache:
 script:
 # - yarn eslint
 #- yarn test
-- yarn build
+# - yarn build
 stages:
 - name: staging
   if: branch = staging
 - name: production
   if: branch = master
+before_deploy:
+  - yarn build
 deploy:
   - provider: s3
     access_key_id: "$AWS_ACCESS_KEY_ID"
