--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:cv": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "test:cv": "jest --coverage",
+    "test:report": "jest --coverage --coverageReporters=text-lcov | COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN coveralls",
     "start": "webpack-dev-server --config webpack/webpack.config.js",
     "perf": "lighthouse http://localhost:3000 --view",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.production.config.js --progress --profile --colors",
@@ -26,6 +27,7 @@
     "classnames": "^2.2.6",
     "deck.gl": "^5.3.4",
     "express": "^4.16.3",
+    "google-map-react": "^1.1.2",
     "history": "^4.7.2",
     "humps": "^2.0.1",
     "lodash": "^4.17.11",
@@ -34,6 +36,7 @@
     "offline-plugin": "^5.0.5",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.12",
     "react-icons": "^3.2.2",
@@ -68,6 +71,7 @@
     "coveralls": "^3.0.2",
     "critters-webpack-plugin": "^1.1.0",
     "cross-env": "^5.0.1",
+    "csp-header": "^1.3.1",
     "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.0",
     "csslint": "^1.0.5",
@@ -88,9 +92,14 @@
     "google-fonts-webpack-plugin": "^0.4.4",
     "html-critical-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "4.0.0-beta.2",
+    "identity-obj-proxy": "^3.0.0",
     "imagemin-webpack-plugin": "^2.2.0",
     "jest": "^23.5.0",
+    "jest-config": "^24.0.0",
+    "jest-svg-transformer": "^1.0.0",
+    "jest-transform-file": "^1.1.1",
     "jest-webpack": "^0.5.1",
+    "jsdom": "^13.2.0",
     "json-loader": "^0.5.4",
     "json-server": "^0.14.0",
     "lighthouse": "^3.0.3",
@@ -104,6 +113,7 @@
     "prettier-stylelint": "^0.4.2",
     "react-addons-test-utils": "^15.0.2",
     "react-styleguidist": "^7.2.3",
+    "redux-mock-store": "^1.5.3",
     "redux-saga-test": "^1.0.1",
     "redux-saga-test-plan": "^3.7.0",
     "redux-saga-testing": "^1.0.5",
@@ -115,6 +125,7 @@
     "style-loader": "^0.22.1",
     "stylelint-config-recommended": "^2.1.0",
     "surge": "^0.20.1",
+    "svg-react-loader": "^0.4.6",
     "sw-cache-plugin": "^1.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.1.2",
