--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ deploy:
     access_key_id: "$AWS_ACCESS_KEY_ID"
     secret_access_key: "$AWS_SECRET_ACCESS_KEY"
     bucket: "$AWS_S3_PRODUCTION_BUCKET"
+    skip_cleanup: true
     acl: public_read
     cache_control: max-age=31536000
     local_dir: dist
@@ -32,6 +33,7 @@ deploy:
     access_key_id: "$AWS_ACCESS_KEY_ID"
     secret_access_key: "$AWS_SECRET_ACCESS_KEY"
     bucket: "$AWS_S3_STAGING_BUCKET"
+    skip_cleanup: true
     acl: public_read
     cache_control: max-age=31536000
     local_dir: dist
