--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "svg-react-loader": "^0.4.6",
     "sw-cache-plugin": "^1.0.1",
     "sw-precache-webpack-plugin": "^0.11.5",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.16.5",
     "webpack-bundle-analyzer": "^3.0.3",
